--- a/hw2_Dictionaries&Functions.ipynb
+++ b/hw2_Dictionaries&Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "통계프로그래밍 assignment2b 1870091 최혜빈"
+    "통계프로그래밍 assignment2b"
    ]
   },
   {
